--- a/templates/index.html
+++ b/templates/index.html
@@ -115,12 +115,17 @@
                                 </form>
                             </div>
 
-                            <!-- Comentarios -->
+                         <!-- Comentarios -->
                             <div id="comments-{{ post.id }}" class="comments" style="display: none;">
                                 {% for comment in post.comments.all %}
                                     <div class="comment d-flex align-items-start mb-3">
                                         <!-- Imagen del usuario -->
-                                        <img src="https://via.placeholder.com/50" class="img-fluid rounded-circle me-3" alt="User Image">
+                                        <img src="{% if comment.user.profile_picture %}{{ comment.user.profile_picture.url }}{% else %}{% static 'images/imagenDefecto.png' %}{% endif %}" 
+                                        class="img-fluid rounded-circle me-3" 
+                                        alt="User Image" 
+                                        width="50" 
+                                        height="50" 
+                                        style="object-fit: cover;">
 
                                         <div>
                                             <p><strong><a href="{% url 'profile' comment.user.nombre %}">{{ comment.user.nombre }}</a></strong> comentó:</p>
