Integración de banner en la bd y mostrarlo en profile

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,7 +8,7 @@
     <div class="position-relative mb-4">
         <!-- Banner -->
         <div class="banner-container">
-            <img src="https://via.placeholder.com/1200x300" class="img-fluid" alt="Banner de portada" style="width: 100%; height: auto;">
+            <img src="{{ banner_pictureP|default:default_banner_url }}" class="img-fluid" alt="Banner de portada" style="width: 100%; height: auto;">
         </div>
         <!-- Imagen de perfil -->
         <div class="profile-picture-container position-absolute top-100 start-50 translate-middle">
