--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,6 +3,19 @@
 {% block title %}Nexly: {{ nombre }}{% endblock %}
 
 {% block content %}
+    <!-- Alerts -->
+{% if request.session.follow_request_message %}
+<div class="alert-container">
+    <div class="alert alert-info alert-dismissible fade show" role="alert">
+        {{ request.session.follow_request_message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close" onclick="clearNotification()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+</div>
+  
+{% endif %}
+
 <div class="nexly-container">
     <!-- Sección de banner y foto de perfil -->
     <div class="position-relative mb-4">
@@ -264,6 +277,19 @@
     </div>
 </div>
 
+
+<script>
+    // JavaScript para eliminar el mensaje de la sesión
+    document.addEventListener('DOMContentLoaded', function() {
+        // Elimina el mensaje de la sesión después de mostrarlo
+        fetch("{% url 'clear_follow_request_message' %}", {
+            method: 'POST',
+            headers: {
+                'X-CSRFToken': '{{ csrf_token }}'
+            }
+        });
+    });
+</script>
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         // Guardar cambios en una publicación
