--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content" style="background-color: #2A2A2A; color: #FFFFFF;">
             <div class="modal-header">
-                <h5 class="modal-title" id="uploadStoryModalLabel">Upload a Story</h5>
+                <h5 class="modal-title" id="uploadStoryModalLabel">Agrega una historia</h5>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
