--- a/templates/layoutUser.html
+++ b/templates/layoutUser.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{% url 'nexly' %}">
                 <img src="{% static 'images/LogoNexly.ico' %}" alt="Logo Nexly" style="height: 30px;">
                 <strong>NEXLY</strong>
             </a>
@@ -26,6 +26,11 @@
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == '/' %}active{% endif %}" aria-current="page" href="{% url 'nexly' %}">
                         Inicio
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'inbox' %}">
+                        inbox
                         </a>
                     </li>
                     <li class="nav-item">
